<?xml version="1.0"?>
<package format="2">
  <name>util_simulation_only_msgs</name>
  <version>1.0.0</version>
  <description>Util for simulation_only_msgs</description>

  <license>BSD</license>
  <maintainer email="maximilian.naumann@kit.edu">Maximilian Naumann</maintainer>
  <author email="maximilian.naumann@kit.edu">Maximilian Naumann</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>

  <depend>automated_driving_msgs</depend>
  <depend>simulation_only_msgs</depend>
  <depend>util_geometry_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
